# Hey_i_MCP

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  server.py
src/hey_i_mcp/: __init__.py  analytics_dashboards.py  config.py  database.py  server.py  supabase_api.py
